# TillySynth

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  more ideas.md  prd.md
CHORUS/: README.md  chorus.ipynb
CHORUS/article/: index.html  style.css
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  PresetReviewApp.cpp  PresetVariantGenerator.cpp  PresetVariantGenerator.h  check_silent_presets  check_silent_presets.cpp  debug.cpp  test_filter  test_filter.cpp  test_filter2  test_filter2.cpp  test_filter3  test_filter3.cpp  test_mod  test_mod.cpp  test_silence.cpp  test_voice.cpp
Source/DSP/: AnalogueDriftEngine.cpp  AnalogueDriftEngine.h  ChorusEngine.cpp  ChorusEngine.h  DriftSensorReader.h  DriftSensorReader.mm  Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  ModulationMatrix.h  NoiseOscillator.cpp  NoiseOscillator.h  Oscillator.cpp  Oscillator.h  OutputStage.cpp  OutputStage.h  SubtractiveFilter.cpp  SubtractiveFilter.h  SynthVoice.cpp  SynthVoice.h  VoiceManager.cpp  VoiceManager.h
Source/UI/: TillySynthLookAndFeel.cpp  TillySynthLookAndFeel.h
cmake/: CPM.cmake
docs/: SOURCE_FILE_REFERENCE.md
